--- a/ByteBank_v01/ByteBank_v01.csproj
+++ b/ByteBank_v01/ByteBank_v01.csproj
@@ -15,4 +15,8 @@
     <None Include="D:\dev\sharpcoders\projetos\ByteBank_v01\ByteBank_v01\.editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
 </Project>
